--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Staff Attendant Login</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
+  <link rel="stylesheet" href="assets/css/style.css" media="screen" type="text/css" />
 </head>
 
 <body>
@@ -15,7 +15,7 @@
 
                 <ul>
                     <li><a href="index.html">Staff Attendant Login</a></li>
-                    <li><a href="adminlogin.html">Store Owner</a></li>
+                    <li><a href="Pages/adminlogin.html">Store Owner</a></li>
                    
                 </ul>
 
@@ -32,7 +32,7 @@
     </form>
 
     <div class="login-help">
-      <a href="#">Register</a> • <a href="#">Forgot Password</a>
+      <a href="pages/forgotpassword.html">Forgot Password</a>
     </div>
     </div>
   </div>
