--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
                 <ul>
                     <li><a href="index.html">Staff Attendant Login</a></li>
-                    <li><a href="Pages/adminlogin.html">Store Owner</a></li>
+                    <li><a href="pages/adminlogin.html">Store Owner</a></li>
                    
                 </ul>
 
